--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.0.12",
     "framer-motion": "^7.6.1",
+    "heroicons": "^2.0.12",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
