--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.38.0",
     "react-simple-typewriter": "^4.0.5",
     "react-social-icons": "^5.15.0"
   },
@@ -26,6 +27,7 @@
     "eslint": "8.25.0",
     "eslint-config-next": "12.3.1",
     "postcss": "^8.4.18",
+    "tailwind-scrollbar": "^2.0.1",
     "tailwindcss": "^3.2.0",
     "typescript": "4.8.4"
   }
